Make a declined GPU product cost the device nothing
The library was sold on one invariant -- declining is free -- and one path broke it
outright. A pooled allocation that FAILS still grows the driver's pool as far as
it can on the way to failing and hands back no pointer, so there is nothing to
free: one declined 80 GB product took this 128 GB device from 69 GB free to 1 GB
free, for the life of the process and against every other CUDA process on the
card, while returning null exactly as designed and letting the CPU compute the
right answer. Two guards now. The three buffers' total is checked against
cuMemGetInfo (less 64 MB of headroom) before anything is allocated, which costs
0.6 us on a call that will succeed and stops the pool ever growing for a product
that cannot fit; and a failed allocation trims the pool afterwards, for the case
where free memory moved underneath the check.

The trim has an ordering trap in it that returns CUDA_SUCCESS while doing
nothing, and both halves had to be found by measurement. The buffers that DID
allocate have to be released before the trim or it finds them in use (78 GB held,
with the two swapped); and cuMemFreeAsync is STREAM-ordered, so a trim issued
before cuCtxSynchronize finds them only queued to return. With release, sync and
trim in that order, twelve consecutive declined 80 GB products move free memory
by 0 MB. The test asserts the memory rather than the return value, because the
return value was always right.

Four smaller things the same review found. The size threshold is a property of
the machine, so the tests now size their shapes off Gpu.minWork() instead of
hard-coding the pooled one -- five of them asserted isNotNull on products that a
machine without a memory pool correctly declines -- and the unpooled allocator is
now exercised on every machine rather than being unreachable wherever it is not
needed. SYNC_FLOP_CEILING was a flop count calibrated on one device, which is not
a duration: it is now 2^22 flops per m